common/infrastructure/kgateway/extensions/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kgateway-gateway
spec:
  gatewayClassName: kgateway
  infrastructure:
    parametersRef:
      group: gateway.kgateway.dev
      kind: GatewayParameters
      name: kgateway-gateway-service-parameters
  listeners:
    - name: http-80
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https-443
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
    - name: https-443-passthrough
      protocol: TLS
      port: 443
      hostname: "*.muehlbachler.io"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
