common/infrastructure/kgateway/extensions/fallback-to-traefik.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: fallback-to-traefik
spec:
  parentRefs:
    - name: kgateway-gateway
      sectionName: https-443-passthrough-muehlbachler-io
    - name: kgateway-gateway
      sectionName: https-443-passthrough-muehlbachler-xyz
    - name: kgateway-gateway-internal
      sectionName: https-443-passthrough-muehlbachler-io
    - name: kgateway-gateway-internal
      sectionName: https-443-passthrough-muehlbachler-xyz
  hostnames:
    - "*.muehlbachler.io"
    - "*.muehlbachler.xyz"
  rules:
    - backendRefs:
        - name: traefik
          namespace: traefik
          port: 443
