common/infrastructure/kgateway/extensions/global-https-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: global-https-redirect
spec:
  parentRefs:
    - name: kgateway-gateway
      sectionName: http-80
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
