common/infrastructure/kgateway/extensions/traefik-passthrough.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: fallback-to-traefik
spec:
  parentRefs:
    - name: kgateway-gateway
      sectionName: https-443-passthrough
  rules:
    - backendRefs:
        - name: traefik
          namespace: traefik
          port: 443
